--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   syncfusion_flutter_calendar: ^28.1.37
   flutter_speed_dial: ^7.0.0
+  timetable_view: ^0.3.0
 
   intl: ^0.19.0
   http: ^1.4.0
@@ -87,6 +88,7 @@ flutter:
     - assets/images/logo.png
     - assets/images/logo_512.png
     - assets/images/bot_profile_pic.png
+    - assets/images/logo_everytime.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
