--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   wave_blob: 1.0.5
   audio_waveforms: 1.3.0
 
+  toastification: 3.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
