--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   audio_waveforms: 1.3.0
 
   toastification: 3.0.3
+  flutter_randomcolor: ^1.0.16
 
 dev_dependencies:
   flutter_test:
