--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   toastification: 3.0.3
   flutter_randomcolor: ^1.0.16
 
+  flutter_spinkit: ^5.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
