--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  syncfusion_flutter_calendar: ^28.1.37
+  syncfusion_flutter_calendar: ^28.1.37 # Schedule 화면을 위한 Calendar
+  table_calendar: ^3.1.3 # Project 화면을 위한 Calendar
   flutter_speed_dial: ^7.0.0
   timetable_view: ^0.3.0
 
