--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   flutter_randomcolor: ^1.0.16
 
   flutter_spinkit: ^5.2.2
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
