--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   http: ^1.4.0
   flutter_sound: ^9.28.0
   path_provider: ^2.1.5
-
+  collection: ^1.18.0
   flutter_slidable: ^3.1.2
 
   wave_blob: 1.0.5
