--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   flutter_spinkit: ^5.2.2
   flutter_colorpicker: ^1.1.0
   shared_preferences: ^2.5.3
+  percent_indicator: ^4.2.5
 
 dev_dependencies:
   flutter_test:
